--- a/_includes/default.ejs
+++ b/_includes/default.ejs
@@ -8,7 +8,7 @@ title:
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title><% if(title){ %><%= title %> – <% } %>Cynlet's Programming Den</title>
 	<link rel="icon" href="/img/FishLogo.svg" />
-	<link rel="stylesheet" type="text/css" href="/css/index.css" />
+	<link rel="stylesheet" type="text/css" href="/css/index.css?cb=$randnum">
 </head>
 <body>
 
