--- a/_includes/default.ejs
+++ b/_includes/default.ejs
@@ -7,18 +7,18 @@ title:
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title><% if(title){ %><%= title %> – <% } %>Cynlet's Programming Den</title>
-	<link rel="icon" href="../img/FishLogo.svg" />
-	<link rel="stylesheet" type="text/css" href="../css/index.css" />
+	<link rel="icon" href="/img/FishLogo.svg" />
+	<link rel="stylesheet" type="text/css" href="/css/index.css" />
 </head>
 <body>
 
   <div class="main">
     <header class="top">
-      <img src="../img/FishLogo.svg" alt="CynLu Logo"></img>
+      <img src="/img/FishLogo.svg" alt="CynLu Logo"></img>
       <a href="/">Home</a>
-      <a href="#">Blog</a>
-      <a href="#">Work</a>
-      <a href="#">About</a>
+      <a href="/Blog">Blog</a>
+      <a href="/Work">Work</a>
+      <a href="/About">About</a>
     </header>
     
     <section>
