--- a/_includes/about.ejs
+++ b/_includes/about.ejs
@@ -1,10 +1,10 @@
 ---
 layout: default.ejs
-permalink: /About
+permalink: /about.html
 ---
 <section>
   <div>
-    <h1>this is an about page</h1>
+    <h1>THIS IS AN ABOUT PAGE</h1>
   </div>
 </section>
 
