about page fix | package update | all links functional

--- a/_includes/default.ejs
+++ b/_includes/default.ejs
@@ -16,7 +16,7 @@ title:
     <header class="top">
       <img src="/img/FishLogo.svg" alt="CynLu Logo"></img>
       <% links.navLinks.forEach(link => { %>
-        <a href="<%= link.slug %>"><%= link.title %></a>
+        <a class="site-nav" href="<%= link.slug %>"><%= link.title %></a>
       <% }) %>
     </header>
     
