--- a/about.ejs
+++ b/about.ejs
@@ -5,8 +5,14 @@ permalink: /about.html
 <section class="aboutPage">
   <div>
     <img src="img/AboutIcon.svg" alt="Cynlet's Tuna Icon Design"/>
-    <h1>Cynthia Lu</h1>
-    <h3>
+  </div>
+
+  <div>
+    <h1 class="name">Cynthia Lu</h1>
+  </div>
+
+  <div>
+    <h3 class="desc">
     The average adult Sunfish is 1.8m. They move at the lightning speed of 3.2km/h. Like the mola mola, I, too, wish to be a behemoth of the digital sea. Wandering at the pace of the ocean's current. I marvel at the trivial and mundane. That's why I'm learning nunjucks at 2 AM trying to get this CSS grid to work
     </h3>
   </div>
