--- a/work.njk
+++ b/work.njk
@@ -1,5 +1,9 @@
-{% set body_class = "work" %}
+---
+layout: default.ejs
+permalink: /work.html
+---
+{% set body_class="work" %}
+<main>
+  <div>Hello</div>
+</main>
 
-{% extends "default.ejs" %}
-
-{% block content %}
