class to id change | reset.css added | README update

--- a/about.ejs
+++ b/about.ejs
@@ -2,7 +2,7 @@
 layout: default.ejs
 permalink: /about.html
 ---
-<section class="aboutPage">
+<section id="about">
   <div>
     <img src="img/AboutIcon.svg" alt="Cynlet's Tuna Icon Design"/>
   </div>
