--- a/index.ejs
+++ b/index.ejs
@@ -4,7 +4,7 @@ permalink: /
 ---
 
 <section>
-  <div class="homepage">
+  <div id="home">
     <img src="img/Sunfish.svg" alt="Cynlet's Sunfish Icon Design"/>
     <div>
       <h1>WEB DEVELOPER</h1>
