--- a/_includes/default.ejs
+++ b/_includes/default.ejs
@@ -8,6 +8,7 @@ title:
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title><% if(title){ %><%= title %> – <% } %>Cynlet's Programming Den</title>
 	<link rel="icon" href="/img/FishLogo.svg" />
+	<link rel="stylesheet" type="text/css" href="/css/reset.css" />
 	<link rel="stylesheet" type="text/css" href="/css/index.css" />
 </head>
 <body>
@@ -24,10 +25,8 @@ title:
           <% } %>
       <% }) %>
     </header>
-    
-    <section>
-      <%- content -%>
-    </section>
+ 
+    <%- content -%>
   </div>
 
 </body>
