--- a/css/index.css
+++ b/css/index.css
@@ -58,11 +58,11 @@ header>a {
 }
 
 /* homepage main body values */
-.homepage { 
+#home { 
   display: inline-flex;
   padding: 10vw;
 }
-img[src*="img/Sunfish.svg"] {
+#home img[src*="img/Sunfish.svg"] {
   width:40vw;
   padding-left: 10vw; 
   height: 350px;
@@ -71,7 +71,7 @@ img[src*="img/Sunfish.svg"] {
   position: relative;
   top: 20px;
 }
-div.homepage>div{
+#home div.homepage>div{
   align-self: right;
   text-align: left;
   font-size: 45px;
@@ -83,10 +83,11 @@ div.homepage>div{
 .homepage h1:nth-last-child(1) { color: var(--flamingo); }
 
 /*About Page*/
-section.aboutPage {
+#about {
   display: grid;
 }
 
+/* mobile page change */
 @media (max-width: 700px){
   header.top {
     flex-direction: column;
