--- a/index.ejs
+++ b/index.ejs
@@ -5,8 +5,10 @@ permalink: /
 
 <section>
   <div id="home">
-    <img src="img/Sunfish.svg" alt="Cynlet's Sunfish Icon Design"/>
-    <div>
+    <div class="img">
+      <img src="img/Sunfish.svg" alt="Cynlet's Sunfish Icon Design"/>
+    </div>
+    <div class="container">
       <h1>WEB DEVELOPER</h1>
       <h1>CYNTHIA LU</h1>
       <h1>GRAPHIC DESIGN</h1>
