--- a/css/index.css
+++ b/css/index.css
@@ -11,12 +11,17 @@
 * {
   box-sizing: border-box;
 }
-html, 
-body {
+html, body {
   font-family: Arial, Helvetica, sans-serif;
   background-color: var(--lightgray);
   margin: 0 auto;
   padding: 0;
+  height: 100%;
+}
+.main {
+  min-height: 100%;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
 }
 
 /* top banner values */
@@ -51,11 +56,28 @@ header.top>a {
   text-decoration-line: underline;
 }
 
+/* Middle values */
+.middle {
+  display: grid;
+}
+
+/* Footer Values */
+footer.bottom {
+  grid-row-start: 3;
+  grid-row-end: 4;
+}
+footer>p {
+  color: var(--darkgray);
+}
+
 /* Home page */
+section {
+  display: inherit;
+}
 #home { 
   display: flex;
   flex-wrap: wrap;
-  margin: 10vw;
+  align-self: center;
 }
 #home .img {
 flex-basis: 50%;
@@ -81,6 +103,39 @@ align-self: center;
 /*About Page*/
 #about {
   display: grid;
+  
+  grid-template-areas: 
+    "a b"
+    "a c"
+    "d e"
+    "f e";
+
+  grid-template-rows: 0.5fr 0.5fr 0.125fr 1fr;
+  grid-template-columns: 0.5fr 2fr;
+  
+  grid-gap: 1rem;
+  
+  margin-right: 4rem;
+  margin-left: 4rem;
+}
+#about .portrait {
+  grid-row: 1 / 3;
+  grid-column: 1 / 2;
+}
+#about .portrait>img[src*="img/AboutIcon.svg"] {
+  display: block;
+  height: auto;
+  width: 100%; 
+  padding-block-start: 1rem;
+  padding-block-end: 1rem;
+}
+#about .title {
+  grid-row: 1 / 2;
+  grid-column: 2 / 3;
+}
+#about .desc {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
 }
 
 /*** Mobile page change ***/
