njk componentized | SASS implemented | CSS reworked not yet done

--- a/blog.njk
+++ b/blog.njk
@@ -1,7 +1,5 @@
----
-layout: default.ejs
-permalink: /blog.html
----
-<main class="blog">
+{% set body_class = "blog"  %}
+{% extends "default.njk" %}
 
-</main>
+{% block content %}
+{% endblock %}
