--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,8 @@
   box-sizing: border-box;
 }
 html, body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: 'Quicksand', 'Montserrat', sans-serif;
+
   background-color: var(--lightgray);
   margin: 0 auto;
   padding: 0;
@@ -27,10 +28,12 @@ html, body {
 /* top banner values */
 header.top {
   display: inline-flex;
+
   background-color: var(--brown);
   color: var(--liorange);
   padding: 15px;
   text-align: left; 
+
   width:100%;
   height: auto;
 } 
@@ -80,7 +83,7 @@ section {
   align-self: center;
 }
 #home .img {
-flex-basis: 50%;
+flex-basis: 40%;
 padding-right: 25px;
 align-self: center;
 }
@@ -89,11 +92,13 @@ align-self: center;
   float: right;
 }
 #home .container{
-  font-size: 45px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 5em;
   font-weight: bolder;
+
   font-optical-sizing: auto;
   align-self: center;
-  flex-basis: 50%;
+  flex-basis: 60%;
   line-height: 2;
 }
 #home h1:nth-last-child(3) { color: var(--darkcyan);}
@@ -148,11 +153,15 @@ align-self: center;
   header.top img[src*="img/FishLogo.svg"] {
     flex-basis: 100%;
     align-self: center;
+    margin-bottom: 1rem;
   }
   header.top>a {
     flex-grow: 4;
     padding-right: 1vw;
     margin-right: unset;
+  }
+  .site-nav.active{
+    background-color: var(--beige);
   }
 
   /**Home Page Mobile specifics**/
@@ -162,7 +171,8 @@ align-self: center;
   }
   #home .img {
     flex-basis: 50%;
-    align-self: center
+    align-self: center;
+    padding-right: unset;
   }
   #home .img>img[src*="img/Sunfish.svg"] {
     height: auto;
@@ -173,6 +183,10 @@ align-self: center;
 
     align-self: center;
     padding-top: 10px;
+  }
+
+  .hometext {
+    font-size: 1em;
   }
 
 }
