_cards added | work.njk unfinished | style.scss added w folder | package.json updated

--- a/_includes/default.njk
+++ b/_includes/default.njk
@@ -4,10 +4,10 @@
   <title> Cynlet's Programming Den </title>
   <link rel="icon" href="/img/FishLogo.svg" />
   <link rel="stylesheet" type="text/css" href="/css/reset.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Quicksand&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;800&family=Quicksand&display=swap" />
   <link rel="stylesheet" type="text/css" href="/css/index.css" />
   <style>
-  {% include "css/styles.css" ignore missing %}
+    {% include "css/styles.css" ignore missing %}
   </style>
 </head>
 
@@ -15,12 +15,11 @@
 
   {% include "_header.njk" %}
 
+  <main class="middle">
   {% block content %}
-    <main class="middle">
-    <!-- content -->
-    </main>
-  {% endblock %}
 
+  {% endblock %}
+  </main>
   {% include "_footer.njk" %}
 
 </body>
