--- a/index.njk
+++ b/index.njk
@@ -1,8 +1,7 @@
-{% set body_class = "home" %}
 {% extends "default.njk" %}
 
 {% block content %}
-<section>
+<section class="home">
   <div class="img">
     <img src="img/Sunfish.svg" alt="Cynlet's Sunfish Icon Design"/>
   </div>
