--- a/work.njk
+++ b/work.njk
@@ -1,9 +1,3 @@
----
-layout: default.njk
-permalink: /work.html
----
-{% set body_class="work" %}
-<main>
-  <div>Hello</div>
-</main>
+{% import "_includes/_cards.njk" as card %}
 
+{% extends default.njk %}
